# gsplat

./: README_Setup.md  pyproject.toml  run.py
compression/: CMakeLists.txt  GPU_OCTREE_README.md  install_dependencies.sh
compression/include/: compression.h  nvcomp_wrapper.h  utils.h
compression/src/: gpu_octree_compression.cpp  main.cpp  nvcomp_wrapper.cpp  utils.cpp
configs/: actorshq.toml  drjohnson.toml
examples/: config.py  simple_trainer.py  utils.py
examples/datasets/: colmap.py
examples/datasets/pycolmap/: scene_manager.py
gsplat/cuda/: _wrapper.py
gsplat/cuda/include/: Ops.h
gsplat/strategy/: default.py
main/: searchindex.js
main/.doctrees/: environment.pickle
scripts/: batch_run.py  batch_run_actorshq.py  render_actorshq_images.py  run_actorshq.py  utils.py
