[build-system]
requires = [
    "setuptools>=64",
    "wheel", 
    "ninja",
    "numpy<2",
]
build-backend = "setuptools.build_meta"

[project]
name = "gsplat"
dynamic = ["version"]
description = "Python package for differentiable rasterization of gaussians"
keywords = ["gaussian", "splatting", "cuda"]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [
    {name = "nerfstudio-project"},
]

dependencies = [
    "ninja",
    "rich>=12",
    "numpy<2",
]

[tool.setuptools]
packages = ["gsplat"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "gsplat.version.__version__"}